# ACL

./: README.md  pyproject.toml
.github/workflows/: runtime-tests.yml
design/: 00_mappa_architettura.puml  DESIGN.md
design/attività/: 00_mappa_attivita.puml  01_valutazione_is_allowed.puml  02_match_entry.puml  03_ereditarieta_multi_padre.puml  04_candidate_resources.puml  05_creazione_entry_acl.puml  06_creazione_risorsa_seeding.puml  07_bootstrap_setup.puml  08_enforcement_boundary.puml  09_grant_protetti.puml  10_risoluzione_profilo.puml
design/classi/: 00_modello_concettuale.puml  01_acl_entry.puml  02_soggetti_risorse_operazioni.puml  03_profili_permessi_decisioni.puml  04_invarianti_grant.puml  05_policy_services_ports.puml  06_bootstrap_seeding.puml  07_errori_audit_trace.puml
design/componenti/: 00_mappa_componenti.puml  01_dipendenze_layer.puml  02_policy_ports_interni.puml  03_normalizzazione_richieste.puml  04_gestione_acl_bootstrap.puml  05_identita_profili.puml  06_persistenza_performance.puml  07_errori_audit.puml
design/oggetti/: 00_mappa_oggetti.puml  01_lettura_pubblica.puml  02_mutazione_gruppo_editors.puml  03_utente_specifico_soglia_universale.puml  04_deny_precedence.puml  05_ereditarieta_photo_gallery.puml  06_radici_tipo_e_global.puml  07_seeding_creator.puml  (+3 more)
implementation/: 00_mappa_implementazione.puml  IMPLEMENTATION.md
src/: __init__.py
tests/: conftest.py  test_acl_service.py  test_authorization_policy.py  test_bootstrap_and_adapters.py  test_domain_matching_and_invariants.py  test_infrastructure_adapters.py
(+66 files in other folders)
